tests/neg/i21944.scala
enum Orientation extends AnyVal: // error
    case North, South, East, West
